Lesson with aymar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div class="card"></div>
         <div class="card"></div>
     </div>
+    <a href="./awesome-auto-expand-card/index.html">cliquez l'exemple</a>
     <script src="main.js"></script>
 </body>
 </html>
