--- a/awesome-auto-expand-card/index.html
+++ b/awesome-auto-expand-card/index.html
@@ -14,5 +14,6 @@
         <div class="card"></div>
         <div class="card"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
