Dashboard Build finish version 0.1.0

--- a/awesome-auto-expand-card/index.html
+++ b/awesome-auto-expand-card/index.html
@@ -10,7 +10,7 @@
 <body class="light">
     <div class="container">
         <div class="card"></div>
-        <div class="card grid-span"></div>
+        <div class="card"></div>
         <div class="card"></div>
         <div class="card"></div>
     </div>
