--- a/any-dashboard/index.html
+++ b/any-dashboard/index.html
@@ -12,7 +12,7 @@
         <div class="app-header">
             <div class="app-header-left">
                 <span class="app-icon"></span>
-                <p class="app-name">Portfolio</p>
+                <p class="app-name"><span style="font-size: 2rem;">ωε~net</span>  dev_army Network</p>
                 <div class="search-wrapper">
                     <input class="search-input" type="text" placeholder="Search">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
@@ -49,8 +49,8 @@
                     </svg>
                 </button>
                 <button class="profile-btn">
-                    <img src="https://assets.codepen.io/3306515/IMG_2025.jpg" />
-                    <span>Aybüke C.</span>
+                    <img src="https://avatars.githubusercontent.com/u/66219447?s=96&v=4" />
+                    <span>SamsoloDroid</span>
                 </button>
             </div>
             <button class="messages-btn">
