Structure Utilities repo github pages

--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 </head>
 <body>
     <div class="container">
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
-        <div class="card"></div>
+        <div class="card"><span><a href="./any-dashboard/index.html" target="_blank">ωε~net Dashboard</a></span></div>
+        <div class="card"><span><a href="./awesome-auto-expand-card/index.html" target="_blank">Expand Card Utility</a></span></div>
+        <div class="card"><span><a href="./enterprises-collab/index.html" target="_blank">Enterprises-collab Section Utility</a></span></div>
+        <div class="card"><span><a href="./grid-css-mastery/index.html" target="_blank">Testimony Section Utility</a></span></div>
+        <div class="card"><span>ωε~net Dashboard</span></div>
+        <div class="card"><span>Expand Card Utility</span></div>
+        <div class="card"><span>Enterprises-collab Section Utility</span></div>
+        <div class="card"><span>Testimony Section Utility</span></div>
+        <div class="card"><span>Up Coming Utility</span></div>
+        <div class="card"><span>ωε~net Dashboard</span></div>
     </div>
     <a href="./awesome-auto-expand-card/index.html">cliquez l'exemple</a>
     <script src="main.js"></script>
