Utilities github page: Add Delay navigation

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="card"><span><a href="./any-dashboard/index.html" target="_blank">ωε~net Dashboard</a></span></div>
-        <div class="card"><span><a href="./awesome-auto-expand-card/index.html" target="_blank">Expand Card Utility</a></span></div>
-        <div class="card"><span><a href="./enterprises-collab/index.html" target="_blank">Enterprises-collab Section Utility</a></span></div>
-        <div class="card"><span><a href="./grid-css-mastery/index.html" target="_blank">Testimony Section Utility</a></span></div>
+        <div class="card"><span><a href="'./any-dashboard/index.html">ωε~net Dashboard</a></span></div>
+        <div class="card"><span><a href="./awesome-auto-expand-card/index.html">Expand Card Utility</a></span></div>
+        <div class="card"><span><a href="./enterprises-collab/index.html">Enterprises-collab Section Utility</a></span></div>
+        <div class="card"><span><a href="./grid-css-mastery/index.html">Testimony Section Utility</a></span></div>
         <div class="card"><span>ωε~net Dashboard</span></div>
         <div class="card"><span>Expand Card Utility</span></div>
         <div class="card"><span>Enterprises-collab Section Utility</span></div>
