Utilities github page: Add Delay navigation Correction bugs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <div class="card"><span><a href="'./any-dashboard/index.html">ωε~net Dashboard</a></span></div>
+        <div class="card"><span><a href="./any-dashboard/index.html">ωε~net Dashboard</a></span></div>
         <div class="card"><span><a href="./awesome-auto-expand-card/index.html">Expand Card Utility</a></span></div>
         <div class="card"><span><a href="./enterprises-collab/index.html">Enterprises-collab Section Utility</a></span></div>
         <div class="card"><span><a href="./grid-css-mastery/index.html">Testimony Section Utility</a></span></div>
